--- a/estimates.tex
+++ b/estimates.tex
@@ -27,7 +27,7 @@ prefires5 & -651.99 & 152.92 & 220.05 & 265.93 & 185.14 & 297.44 & 436.75 & 430.
  & 462.42 & 25.93 & 25.58 & 25.86 & 72.37 & 53.17 & 42.00 & 37.66 \\                                    
 Financial MC ($\beta_{FMC}$) & -3.2219 & 0.0020 \\\hline
 \end{tabular} 
-}
+}/home/connor/.ssh/id_ed25519-2
 \scriptsize
 \parbox{\textwidth}{\emph{Notes} Second stage additional controls: year, county by year, zip, BD, FHSZ FE; beds age lnsqft prefires5 incorp. Choice set: PropertyZip regulated fhsznum boundaryID  countyfips. \bf{Sample: All of CA}}
 \end{table}
