--- a/quarto-pres.qmd
+++ b/quarto-pres.qmd
@@ -546,3 +546,140 @@ regxlnwhp & -157.03 & 6.60 & -9.10 & -27.85 & 5.64 & -18.31 & -46.33 & -46.20 \\
 \parbox{\textwidth}{\emph{Notes} Second stage additional controls: year, county by year, zip, BD, FHSZ FE; beds age lnsqft prefires5 incorp. Choice set: PropertyZip regulated fhsznum boundaryID  countyfips. \bf{Sample: All of CA}}
 \end{table}
 ```
+\\begin{table} \\centering
+
+\\caption{First Stage Estimates in \\\$ (v1014d)} \\resizebox{17cm}{!}{
+
+\\begin{tabular}{lcccccccc}
+
+& \\multicolumn{24}{c}{Origin WHP=0} & \\multicolumn{24}{c}{Origin WHP: Low} & \\multicolumn{2}{c}{Origin WHP: Medium} & \\multicolumn{2}{c}{Origin WHP: High} \\\\\\cmidrule(lr){2-3}\\cmidrule(lr){4-5}\\cmidrule(lr){6-7}\\cmidrule(lr){8\$\>\$0} \\\\\\cmidrule(lr){2-5}\\cmidrule(lr){6-9}
+
+& Base& Q2 & Q13 & Q24 & Q1 & Q2 & Q13 & Q24 \\\\ \\hline
+
+\\\\\[-.3cm\]
+
+regulated & 1032.68 & 229.49 & 40.12 & 267.03 & 48.26 & 311.54 & 83.42 & 213.81 \\\\
+
+& 305.61 & 9.11 & 23.68 & 17.03 & 25.00 & 18.58 & 21.00 & 18.22 \\\\
+
+lnwhp & -21.53 & -39.35 & 4.03 & -23.63 & 25.92 & 10.37 & 38.93 & 22.08 \\\\
+
+& 38.86 & 1.88 & 3.90 & 3.97 & 3.91 & 4.03 & 3.46 & 3.78 \\\\
+
+regxlnwhp & -154.88 & -20.44 & -9.25 & -42.74 & -18.17 & -59.71 & -5.91 & -25.87 \\\\
+
+& 52.26 & 2.59 & 5.79 & 5.17 & 5.84 & 5.22 & 4.87 & 4.78 \\\\
+
+lnlot & 3095.22 & 18.17 & 23.91 & 36.90 & 25.88 & 64.85 & 4.92 & 68.97 \\\\
+
+& 98.85 & 3.80 & 8.27 & 7.64 & 8.44 & 7.79 & 7.10 & 6.91 \\\\
+
+avgscore & 7923.61 & 1734.62 & 29.60 & 1793.34 & -80.97 & 1620.27 & -98.83 & 1513.61 \\\\
+
+& 1325.49 & 16.07 & 39.33 & 31.66 & 43.53 & 35.93 & 38.81 & 35.06 \\\\
+
+shwhite & 8215.90 & 600.61 & 162.85 & 792.45 & 180.75 & 686.99 & 290.73 & 730.38 \\\\
+
+& 742.63 & 9.49 & 21.27 & 22.99 & 23.35 & 26.09 & 21.33 & 25.38 \\\\
+
+lnpad & -1563.52 & -47.13 & 36.68 & -19.30 & -22.47 & -52.94 & -24.14 & -64.58 \\\\
+
+& 240.98 & 2.41 & 5.73 & 5.21 & 5.86 & 5.64 & 5.25 & 5.30 \\\\
+
+post2008 & 2596.61 & 169.25 & 130.20 & 280.85 & 83.95 & 314.62 & -19.06 & 246.59 \\\\
+
+& 310.56 & 12.32 & 27.05 & 23.94 & 28.58 & 24.71 & 25.63 & 23.12 \\\\
+
+socal & - & -79.80 & -49.65 & -121.59 & -72.80 & -103.20 & -28.70 & 5.30 \\\\
+
+& - & 4.19 & 9.34 & 9.21 & 10.14 & 10.44 & 9.34 & 10.27 \\\\
+
+MC (\$\\beta\_{FMC}\$) & -3.1676 & 0.0020\\\\ \\hline
+
+\\end{tabular}
+
+}
+
+\\scriptsize
+
+\\parbox{\\textwidth}{\\emph{Notes} Second stage additional controls: year, county by year, zip, BD, FHSZ FE; beds age lnsqft prefires5 incorp. Choice set: PropertyZip regulated fhsznum boundaryID countyfips. \\bf{Sample: All of CA}}
+
+\\end{table}
+
+\\begin{table} \\centering
+
+\\caption{First Stage Estimates in \\\$ (v1014a)} \\resizebox{17cm}{!}{
+
+\\begin{tabular}{lcccccccc}
+
+& \\multicolumn{4}{c}{Origin WHP=0} & \\multicolumn{4}{c}{Origin WHP\$\>\$0} \\\\\\cmidrule(lr){2-5}\\cmidrule(lr){6-9}
+
+& Base& Q2 & Q3 & Q4 & Q1 & Q2 & Q3 & Q4 \\\\ \\hline
+
+\\\\\[-.3cm\]
+
+\\\\
+
+regulated & 999.01 & 36.86 & 84.92 & 137.08 & 94.34 & 67.62 & 136.42 & 155.51 \\\\
+
+& 322.81 & 21.99 & 21.60 & 21.54 & 33.51 & 32.20 & 30.07 & 28.13 \\\\
+
+whpL & 268.64 & -39.62 & -52.19 & -98.28 & 11.73 & -13.76 & -15.47 & -66.80 \\\\
+
+& 141.74 & 5.89 & 6.24 & 6.79 & 9.53 & 9.80 & 10.48 & 10.78 \\\\
+
+whpM & -47.59 & -64.37 & -75.99 & -174.43 & 48.12 & 65.54 & 33.37 & -79.18 \\\\
+
+& 337.41 & 27.85 & 28.62 & 30.79 & 37.90 & 37.17 & 38.02 & 41.17 \\\\
+
+whpH & -524.26 & -95.23 & -150.41 & -234.31 & 21.80 & 43.09 & 5.30 & -108.69 \\\\
+
+& 352.13 & 27.29 & 28.82 & 30.79 & 39.70 & 36.75 & 37.73 & 39.96 \\\\
+
+regxwhpL & -479.09 & 52.38 & 97.86 & 152.27 & -23.41 & 78.73 & 47.18 & 155.77 \\\\
+
+& 282.40 & 24.48 & 23.90 & 23.81 & 37.41 & 35.28 & 32.94 & 30.71 \\\\
+
+regxwhpM & -1006.25 & 88.34 & 10.85 & 14.15 & -63.33 & 89.35 & -64.03 & 20.58 \\\\
+
+& 471.91 & 42.21 & 42.30 & 43.54 & 60.77 & 55.26 & 55.52 & 55.15 \\\\
+
+regxwhpH & -734.95 & -4.76 & -72.19 & -238.15 & -16.97 & -39.34 & -170.88 & -231.14 \\\\
+
+& 448.55 & 37.42 & 38.32 & 39.98 & 55.09 & 51.16 & 50.49 & 50.91 \\\\
+
+lnlot & 3117.10 & -11.39 & -20.27 & -1.95 & 20.62 & 24.16 & 38.82 & 59.03 \\\\
+
+& 98.73 & 4.96 & 5.03 & 5.19 & 6.90 & 6.62 & 6.70 & 6.56 \\\\
+
+avgscore & 7153.19 & 1263.41 & 2062.75 & 3007.44 & 18.51 & 1145.45 & 1949.65 & 2928.93 \\\\
+
+& 1325.48 & 23.94 & 23.97 & 24.81 & 39.63 & 34.96 & 33.82 & 32.75 \\\\
+
+shwhite & 8038.44 & 279.36 & 600.10 & 960.90 & 257.07 & 473.86 & 755.60 & 1099.78 \\\\
+
+& 742.71 & 12.23 & 12.77 & 14.21 & 19.22 & 19.27 & 20.76 & 22.76 \\\\
+
+lnpad & -1561.90 & -32.38 & -45.73 & -85.89 & -8.89 & -34.10 & -44.97 & -81.82 \\\\
+
+& 241.01 & 3.29 & 3.35 & 3.48 & 5.04 & 4.91 & 5.00 & 4.87 \\\\
+
+post2008 & 2599.08 & -20.43 & 6.66 & 150.32 & 80.91 & 114.67 & 203.75 & 332.46 \\\\
+
+& 309.32 & 15.88 & 16.16 & 16.45 & 23.42 & 21.85 & 21.58 & 20.76 \\\\
+
+socal & - & 39.55 & -11.36 & -113.91 & -48.38 & -15.32 & -37.28 & -91.41 \\\\
+
+& - & 5.54 & 5.70 & 6.05 & 8.38 & 8.49 & 8.78 & 8.91 \\\\
+
+MC (\$\\beta\_{FMC}\$) & -3.1900 & 0.0020 \\\\ \\hline
+
+\\end{tabular}
+
+}
+
+\\scriptsize
+
+\\parbox{\\textwidth}{\\emph{Notes} Second stage additional controls: year, county by year, zip, BD, FHSZ FE; beds age lnsqft prefires5 incorp. Choice set: PropertyZip regulated fhsznum boundaryID countyfips. \\bf{Sample: All of CA}}
+
+\\end{table}
